Hackish fix to overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ nav{
 	top: 0;
 	left: 0;
 	width: 100%;
-	z-index: 9999;
+	z-index: 5;
 	height: 12vh;
 	background-color: #00a087;
 }/*nav + section MUST = 100*/
@@ -22,6 +22,7 @@ nav{
 	font-family: 'Orbitron', sans-serif;
 	padding-left: .25vw;
 	vertical-align: middle;
+	max-width:100%;
 	overflow-x:hidden;
 	overflow-y:hidden;
 	overflow:hidden;
@@ -32,6 +33,7 @@ nav{
 	height:88%;
 	width:100%;
 	bottom:0em;
+	z-index:10;
 }
 
 nav > a{
@@ -55,7 +57,7 @@ nav > a{
 		display:none;
 	}
 }
-@media (max-width:360px){
+@media (max-width:400px){
 	.github{
 		display:none;
 	}
